kubernetes-instructions/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ashotkostanyan/web-app:v7
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
