kubernetes-instructions/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: back-service
            port:
              number: 3000

# manifests running sequence on server
#1. mysql-secret
#2. mysql-deployment
#3. mysql-config-map
#4. back-deployment
#5. ingress
